tests/snapshots/runtime_error_fixtures/primop_array_len_type.snap
---
source: tests/runtime_error_fixtures_snapshots.rs
---
Fixture: examples/runtime_errors/primop_array_len_type.flx
== vm ==
status: 1
stdout:
<empty>
stderr:
[cfg→vm] Running via CFG → bytecode VM backend...
• 1 error • examples/runtime_errors/primop_array_len_type.flx
error[E1004]: primop array_len expected Array, got Int

  examples/runtime_errors/primop_array_len_type.flx:2:19
  |
2 |     let ignored = array_len(1)
  |                   ^^^^^^^^^^^^

Stack trace:
  at main (examples/runtime_errors/primop_array_len_type.flx:2:19)
  at <main>
== jit ==
status: 1
stdout:
<empty>
stderr:
[cfg→vm] Running via CFG → bytecode VM backend...
• 1 error • examples/runtime_errors/primop_array_len_type.flx
error[E1004]: primop array_len expected Array, got Int

  examples/runtime_errors/primop_array_len_type.flx:2:19
  |
2 |     let ignored = array_len(1)
  |                   ^^^^^^^^^^^^

Stack trace:
  at main (examples/runtime_errors/primop_array_len_type.flx:2:19)
  at <main>
